--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,89 @@
 /* work sans font from google */
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,500;0,600;0,700;1,400&family=Work+Sans:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,500;0,600;0,700;1,400&family=Work+Sans:wght@400;500;600;700;800&display=swap");
+/* shared styles */
+* {
+    margin: 0px;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Work Sans", sans-serif;
+}
+.btn-primary {
+  border: none;
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 600;
+  max-width: 180px;
+  padding: 20px 25px;
+  cursor: pointer;
+}
+/* header styles */
+header {
+  background: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-title {
+  color: var(--Dark-01, #131313);
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+nav > ul {
+  display: flex;
+}
+nav li {
+  list-style: none;
+  margin-right: 40px;
+  font-family: Work Sans;
+  font-size: 1rem;
+  font-weight: 500;
+}
+nav li a {
+  text-decoration: none;
+  color: var(--Dark-02, #424242);
+}
 
-*{
-font-family: 'Bai Jamjuree', sans-serif;
-font-family: 'Work Sans', sans-serif;
+/* banner-styles */
+.banner-content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+.banner-title {
+  color: var(--Dark-01, #131313);
+  font-size: 4rem;
+  font-weight: 700;
+}
+.banner-description {
+  color: var(--Dark-03, #727272);
+  font-size: 1rem;
+  font-weight: 400;
+}
+.banner img{
+    width: 100%;
+    margin-top: 50px;
+}
+
+/* responsive styles */
+/* mobile devices */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+/* tablet device */
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
