--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,500;0,600;0,700;1,400&family=Work+Sans:wght@400;500;600;700;800&display=swap");
 /* shared styles */
 * {
-    margin: 0px;
+  margin: 0px;
   font-family: "Bai Jamjuree", sans-serif;
   font-family: "Work Sans", sans-serif;
 }
@@ -63,27 +63,58 @@ nav li a {
   font-size: 1rem;
   font-weight: 400;
 }
-.banner img{
-    width: 100%;
-    margin-top: 50px;
+.banner img {
+  width: 100%;
+  margin-top: 50px;
 }
 
 /* responsive styles */
 /* mobile devices */
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
 }
 /* tablet device */
-@media screen and (min-width:576px) and (max-width:960px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  nav {
+    flex-direction: column;
+  }
+}
+
+/* main styles */
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+/* teams styles */
+.teams-container {
+  display: flex;
+  align-items: center;
+}
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.teams-content {
+  padding-right: 70px;
+  padding-left: 70px;
+}
+.teams-title {
+  font-size: 2.8rem;
+}
+.quick-list {
+  color: var(--Dark-03, #727272);
+  font-weight: 500;
+}
+.text-features {
+    color: #FF900E;
+font-weight: 700;
 }
