--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@
   padding: 20px 25px;
   cursor: pointer;
 }
+.text-light-gray {
+    color: var(--Dark-03, #727272);
+    font-size: 1rem;
+    font-weight: 400;
+  }
 /* header styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -58,40 +63,14 @@ nav li a {
   font-size: 4rem;
   font-weight: 700;
 }
-.banner-description {
-  color: var(--Dark-03, #727272);
-  font-size: 1rem;
-  font-weight: 400;
-}
 .banner img {
   width: 100%;
   margin-top: 50px;
 }
-
-/* responsive styles */
-/* mobile devices */
-@media screen and (max-width: 576px) {
-  header {
-    padding: 20px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-/* tablet device */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-  header {
-    padding: 50px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-
 /* main styles */
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 /* teams styles */
 .teams-container {
@@ -111,10 +90,42 @@ main {
   font-size: 2.8rem;
 }
 .quick-list {
-  color: var(--Dark-03, #727272);
+    color: var(--Dark-03, #727272);
   font-weight: 500;
 }
 .text-features {
     color: #FF900E;
 font-weight: 700;
 }
+
+/* responsive styles */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header {
+      padding: 20px;
+    }
+    nav,
+    .teams-container
+     {
+      flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+        margin-bottom: 50px;
+    }
+    .teams-content {
+        padding-right: 30px;
+        padding-left: 30px;
+      }
+  }
+  /* tablet device */
+  @media screen and (min-width: 576px) and (max-width: 960px) {
+    header {
+      padding: 50px;
+    }
+    nav, 
+    .teams-container {
+      flex-direction: column;
+    }
+  }
+  
