--- a/styles/style.css
+++ b/styles/style.css
@@ -15,12 +15,18 @@
   font-weight: 600;
   max-width: 180px;
   padding: 20px 25px;
+  margin-top: 20px;
   cursor: pointer;
 }
 .text-light-gray {
     color: var(--Dark-03, #727272);
     font-size: 1rem;
     font-weight: 400;
+  }
+  .section-title {
+    color: var(--Dark-01, #131313);
+    font-size: 2.8rem;
+    font-weight: 700;
   }
 /* header styles */
 header {
@@ -31,11 +37,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.nav-title {
-  color: var(--Dark-01, #131313);
-  font-size: 2.8rem;
-  font-weight: 700;
 }
 nav > ul {
   display: flex;
@@ -88,6 +89,7 @@ main {
 }
 .teams-title {
   font-size: 2.8rem;
+  margin-bottom: 20px;
 }
 .quick-list {
     color: var(--Dark-03, #727272);
