--- a/styles/style.css
+++ b/styles/style.css
@@ -22,11 +22,14 @@
     color: var(--Dark-03, #727272);
     font-size: 1rem;
     font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   .section-title {
     color: var(--Dark-01, #131313);
     font-size: 2.8rem;
     font-weight: 700;
+    margin-top: 30px;
   }
 /* header styles */
 header {
@@ -99,15 +102,54 @@ main {
     color: #FF900E;
 font-weight: 700;
 }
-
-/* responsive styles */
+/* fact sections */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-stats{
+    color: var(--Dark-02, #424242);
+    font-size: 3rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.facts-card-container .card-title{
+    color: var(--Dark-03, #727272);
+font-size: 1.25rem;
+font-weight: 600;
+margin-top: 5px;
+}
+/* sponsor styles */
+.sponsors {
+  text-align: center;
+}
+.sponsors-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+ /* responsive styles  */
 /* mobile devices */
 @media screen and (max-width: 576px) {
     header {
       padding: 20px;
     }
     nav,
-    .teams-container
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container
      {
       flex-direction: column;
     }
@@ -115,9 +157,12 @@ font-weight: 700;
         grid-template-columns: 1fr;
         margin-bottom: 50px;
     }
-    .teams-content {
-        padding-right: 30px;
-        padding-left: 30px;
+    .teams-content,.facts-card-container {
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+      .facts-card-container{
+        gap: 10px;
       }
   }
   /* tablet device */
@@ -126,7 +171,8 @@ font-weight: 700;
       padding: 50px;
     }
     nav, 
-    .teams-container {
+    .teams-container,
+    .sponsors-img-container {
       flex-direction: column;
     }
   }
