--- a/styles/style.css
+++ b/styles/style.css
@@ -19,18 +19,18 @@
   cursor: pointer;
 }
 .text-light-gray {
-    color: var(--Dark-03, #727272);
-    font-size: 1rem;
-    font-weight: 400;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  .section-title {
-    color: var(--Dark-01, #131313);
-    font-size: 2.8rem;
-    font-weight: 700;
-    margin-top: 30px;
-  }
+  color: var(--Dark-03, #727272);
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.section-title {
+  color: var(--Dark-01, #131313);
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin-top: 30px;
+}
 /* header styles */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -94,86 +94,132 @@ main {
   font-size: 2.8rem;
   margin-bottom: 20px;
 }
+/* features section starts */
+.features {
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+.feature-img img{
+   height: 90%;
+   margin-left: 90px;
+}
+.features .section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.feature-content .card {
+    padding: 30px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+}
+.ten-year{
+    border-radius: 8px;
+    background-color: #ff900e;
+    color: #FFF;
+    padding: 40px;
+width: 342px;
+text-align: center;
+position: relative;
+bottom: 100px;
+}
+.ten-year h2{
+    font-size: 4.1rem;
+    margin: 0;
+}
+.ten-year p{
+    font-size: 1.5rem;
+}
 .quick-list {
-    color: var(--Dark-03, #727272);
+  color: var(--Dark-03, #727272);
   font-weight: 500;
 }
 .text-features {
-    color: #FF900E;
-font-weight: 700;
+  color: #ff900e;
+  font-weight: 700;
 }
 /* fact sections */
-.facts-card-container{
-    display: flex;
-    justify-content: space-around;
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
 }
-.facts-card-container .card{
-    border-radius: 8px;
-    border: 1px solid #FF900E;
-    text-align: center;
-    padding: 30px;
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
 }
-.facts-card-container .card-stats{
-    color: var(--Dark-02, #424242);
-    font-size: 3rem;
-    font-weight: 600;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.facts-card-container .card-stats {
+  color: var(--Dark-02, #424242);
+  font-size: 3rem;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.facts-card-container .card-title{
-    color: var(--Dark-03, #727272);
-font-size: 1.25rem;
-font-weight: 600;
-margin-top: 5px;
+.facts-card-container .card-title {
+  color: var(--Dark-03, #727272);
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 5px;
 }
 /* sponsor styles */
 .sponsors {
   text-align: center;
 }
-.sponsors-img-container{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 50px;
-    gap: 40px;
+.sponsors-img-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 50px;
+  gap: 40px;
 }
-.sponsors-img-container img{
-    width: 165px;
+.sponsors-img-container img {
+  width: 165px;
 }
- /* responsive styles  */
+/* responsive styles  */
 /* mobile devices */
 @media screen and (max-width: 576px) {
-    header {
-      padding: 20px;
-    }
-    nav,
-    .teams-container,
-    .facts-card-container,
-    .sponsors-img-container
-     {
-      flex-direction: column;
-    }
-    .teams-img-container{
-        grid-template-columns: 1fr;
-        margin-bottom: 50px;
-    }
-    .teams-content,.facts-card-container {
-        padding-right: 20px;
-        padding-left: 20px;
-      }
-      .facts-card-container{
-        gap: 10px;
-      }
+  header {
+    padding: 20px;
   }
-  /* tablet device */
-  @media screen and (min-width: 576px) and (max-width: 960px) {
-    header {
-      padding: 50px;
-    }
-    nav, 
-    .teams-container,
-    .sponsors-img-container {
-      flex-direction: column;
-    }
+  nav,
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container,
+  .features {
+    flex-direction: column;
   }
-  
+  .feature-img img{
+    width: 90%;
+    margin-left: 0px;
+  }
+  .ten-year{
+    position: static;
+    max-width: 300px;
+  }
+  .teams-img-container {
+    grid-template-columns: 1fr;
+    margin-bottom: 50px;
+  }
+  .teams-content,
+  .facts-card-container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  .facts-card-container {
+    gap: 10px;
+  }
+}
+/* tablet device */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  nav,
+  .teams-container,
+  .sponsors-img-container {
+    flex-direction: column;
+  }
+}
